様々な変更を追加 - docker-compose用のディレクトリを追加   - concourse, mariadb, minio, postgres, redisの実行をコンテナ化 - Eclipseをhomebrew版に戻し、プラグインのインストールを自動化 - GVMのインストールを自動化